<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/detail_movie_poster"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/parsed_poster_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detail_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/parsed_movie_title"
        android:text="Movie Title: "
        app:layout_constraintBottom_toTopOf="@+id/detail_release_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/parsed_release_date"
        android:text="Release Date: "
        app:layout_constraintBottom_toTopOf="@+id/detail_vote_average"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/parsed_vote_average"
        android:text="Vote Average: "
        app:layout_constraintBottom_toTopOf="@+id/detail_plot_synopsis"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_plot_synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/parsed_plot_synopsis"
        android:text="Plot Synopsis: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>